# lobster_claws

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  data.md  pyproject.toml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md  v1.2-REQUIREMENTS.md  v1.2-ROADMAP.md  v1.3-REQUIREMENTS.md
.planning/milestones/v1.0-phases/01-foundation/: 01-VALIDATION.md
.planning/milestones/v1.0-phases/02-transcription-skill/: 02-01-SUMMARY.md  02-02-SUMMARY.md  02-RESEARCH.md
.planning/milestones/v1.0-phases/03-discovery-and-documentation/: 03-01-PLAN.md  03-VERIFICATION.md
.planning/milestones/v1.1-phases/04-google-auth-server/: 04-02-PLAN.md  04-RESEARCH.md  04-VALIDATION.md
.planning/milestones/v1.1-phases/05-gmail-skill/: 05-01-PLAN.md  05-02-PLAN.md  05-CONTEXT.md  05-VERIFICATION.md
.planning/milestones/v1.2-phases/06-calendar-read-operations/: 06-CONTEXT.md  06-VALIDATION.md
.planning/milestones/v1.2-phases/07-calendar-write-operations/: 07-02-SUMMARY.md  07-CONTEXT.md  07-VERIFICATION.md
.planning/milestones/v1.3-phases/08-multi-agent-identity/: 08-01-SUMMARY.md  08-02-PLAN.md
.planning/milestones/v1.3-phases/09-google-drive-skill/: 09-01-PLAN.md  09-02-SUMMARY.md  09-VERIFICATION.md
.planning/phases/01-add-google-tasks-contacts-sheets-and-docs-skills/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-RESEARCH.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/01-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-transcription-skill/: 02-01-PLAN.md  02-02-PLAN.md  02-03-PLAN.md  02-03-SUMMARY.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/phases/03-discovery-and-documentation/: 03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md
.planning/phases/04-google-auth-server/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-CONTEXT.md  04-VERIFICATION.md
.planning/phases/05-gmail-skill/: 05-01-SUMMARY.md  05-02-SUMMARY.md  05-RESEARCH.md  05-VALIDATION.md
.planning/phases/06-calendar-read-operations/: 06-01-PLAN.md  06-01-SUMMARY.md  06-02-PLAN.md  06-02-SUMMARY.md  06-RESEARCH.md  06-VERIFICATION.md
.planning/phases/07-calendar-write-operations/: 07-01-PLAN.md  07-01-SUMMARY.md  07-02-PLAN.md
.planning/phases/08-multi-agent-identity/: 08-01-PLAN.md  08-02-SUMMARY.md  08-VERIFICATION.md
.planning/phases/09-google-drive-skill/: 09-01-SUMMARY.md  09-02-PLAN.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
cli/: pyproject.toml
cli/src/claws_cli/: __init__.py  main.py
cli/tests/: test_main.py
common/: pyproject.toml
common/src/claws_common/: __init__.py  client.py  google.py  host.py  output.py
common/tests/: test_client.py  test_google.py  test_host.py  test_output.py
launchd/: com.lobsterclaws.google-auth.plist  com.lobsterclaws.whisper.plist
servers/google-auth/: pyproject.toml
servers/google-auth/src/google_auth_server/: app.py
servers/google-auth/tests/: conftest.py  test_app.py  test_google_auth_app.py
servers/whisper/: pyproject.toml
servers/whisper/src/whisper_server/: app.py
servers/whisper/tests/: test_app.py
skills/calendar/: pyproject.toml
skills/calendar/src/claws_calendar/: calendar.py  cli.py
skills/calendar/tests/: test_calendar_api.py  test_calendar_cli.py
skills/contacts/: pyproject.toml
skills/contacts/src/claws_contacts/: cli.py  contacts.py
skills/contacts/tests/: test_contacts.py  test_contacts_cli.py
skills/docs/: pyproject.toml
skills/docs/src/claws_docs/: cli.py  docs.py
skills/docs/tests/: test_docs.py  test_docs_cli.py
skills/drive/: pyproject.toml
skills/drive/src/claws_drive/: cli.py  drive.py
skills/drive/tests/: test_drive.py  test_drive_cli.py
skills/gmail/: pyproject.toml
skills/gmail/src/claws_gmail/: cli.py  gmail.py
skills/gmail/tests/: conftest.py  test_gmail.py  test_gmail_cli.py
skills/sheets/: pyproject.toml
skills/sheets/src/claws_sheets/: cli.py  sheets.py
skills/sheets/tests/: test_sheets.py  test_sheets_cli.py
skills/tasks/: pyproject.toml
skills/tasks/src/claws_tasks/: cli.py  tasks.py
skills/tasks/tests/: test_tasks.py  test_tasks_cli.py
skills/transcribe/: pyproject.toml
skills/transcribe/src/claws_transcribe/: cli.py
skills/transcribe/tests/: test_cli.py
tests/: test_launchd.py
