[project]
name = "lobster-claws"
version = "0.1.0"
requires-python = ">=3.12"

[tool.uv]
package = false

[tool.uv.workspace]
members = ["common", "skills/*", "servers/*"]

[dependency-groups]
dev = ["claws-common", "whisper-server", "ruff>=0.15", "pytest>=9.0", "pytest-httpx>=0.36"]

[tool.uv.sources]
claws-common = { workspace = true }
whisper-server = { workspace = true }

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["common/tests", "skills", "servers"]
