[project]
name = "whisper-server"
version = "0.1.0"
description = "FastAPI server wrapping mlx-whisper for audio transcription"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135",
    "uvicorn>=0.42",
    "mlx-whisper>=0.4.3",
    "python-multipart>=0.0.18",
]

[project.scripts]
whisper-server = "whisper_server.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
