[project]
name = "claws-calendar"
version = "0.2.0"
description = "Calendar skill for Lobster Claws"
requires-python = ">=3.11"
dependencies = ["claws-common"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.entry-points."claws.skills"]
calendar = "claws_calendar.cli:main"

[tool.uv.sources]
claws-common = { workspace = true }
