[project]
name = "claws-contacts"
version = "0.1.0"
description = "Google Contacts skill for Lobster Claws"
requires-python = ">=3.11"
dependencies = ["claws-common"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.entry-points."claws.skills"]
contacts = "claws_contacts.cli:main"

[tool.uv.sources]
claws-common = { workspace = true }
