[project]
name = "claws-docs"
version = "0.1.0"
description = "Google Docs skill for Lobster Claws"
requires-python = ">=3.11"
dependencies = ["claws-common"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.entry-points."claws.skills"]
docs = "claws_docs.cli:main"

[tool.uv.sources]
claws-common = { workspace = true }
