[project]
name = "claws-drive"
version = "0.1.0"
description = "Google Drive skill for Lobster Claws"
requires-python = ">=3.11"
dependencies = ["claws-common"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.entry-points."claws.skills"]
drive = "claws_drive.cli:main"

[tool.uv.sources]
claws-common = { workspace = true }
