[project]
name = "claws-sheets"
version = "0.2.0"
description = "Google Sheets skill for Lobster Claws"
requires-python = ">=3.11"
dependencies = ["claws-common"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.entry-points."claws.skills"]
sheets = "claws_sheets.cli:main"

[tool.uv.sources]
claws-common = { workspace = true }
