[project]
name = "claws-tasks"
version = "0.2.0"
description = "Google Tasks skill for Lobster Claws"
requires-python = ">=3.11"
dependencies = ["claws-common"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.entry-points."claws.skills"]
tasks = "claws_tasks.cli:main"

[tool.uv.sources]
claws-common = { workspace = true }
