[project]
name = "claws-transcribe"
version = "0.2.0"
description = "Audio transcription skill for Lobster Claws"
requires-python = ">=3.11"
dependencies = ["claws-common"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
claws-transcribe = "claws_transcribe.cli:main"

[project.entry-points."claws.skills"]
transcribe = "claws_transcribe.cli:main"

[tool.uv.sources]
claws-common = { workspace = true }
